--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/Spring-JPA-Recipe-App
+    working_directory: ~/spring5-recipe-app
 
     environment:
       # Customize the JVM maximum heap limit
@@ -27,7 +27,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - Spring-JPA-Recipe-App-{{ checksum "pom.xml" }}
+            - spring5-recipe-app-{{ checksum "pom.xml" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
@@ -36,7 +36,7 @@ jobs:
       - save_cache:
           paths:
             - ~/.m2
-          key: Spring-JPA-Recipe-App-{{ checksum "pom.xml" }}
+          key: spring5-recipe-app-{{ checksum "pom.xml" }}
 
       # run tests!
       - run: mvn integration-test
